--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "lite-server"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Christopher Wong",
   "license": "ISC",
-  "devDependencies": {
-    "lite-server": "^2.3.0"
+  "dependencies": {
+    "express": "^4.16.3"
   }
 }
