--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,19 @@
 {
-  "extends": ["airbnb-base", "prettier"],
-  "parserOptions": {
-    "ecmaVersion": 8
-  },
-  "plugins": ["import", "prettier"],
-  "env": {
-    "es6": true,
-    "browser": true
-  },
-  "rules": {
-    "no-plusplus": "off"
-  }
+    "env": {
+        "browser": true,
+        "es6": true
+    },
+    "extends": [
+        "standard"
+    ],
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "rules": {
+    }
 }
