--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,16 +4,24 @@
         "es6": true
     },
     "extends": [
+        "plugin:react/recommended",
         "standard"
     ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
+    "parser": "babel-eslint",
     "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
+    "plugins": [
+        "react"
+    ],
     "rules": {
     }
 }
