--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "deploy": "npm run build && surge ./dist http://shivering-force.surge.sh/"
   },
   "author": "Christopher Wong",
   "license": "ISC",
@@ -17,7 +18,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^6.8.0",
