--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html",
+    "build": "rm -rf ./dist && parcel build index.html",
     "deploy": "npm run build && surge ./dist http://shivering-force.surge.sh/"
   },
   "author": "Christopher Wong",
